Fix  letter spacing on body

--- a/style.css
+++ b/style.css
@@ -4,7 +4,6 @@ body {
     color: rgba(0,0,0,.5);
     text-align: center;
     text-transform: uppercase;
-    letter-spacing: .5em;
     top: 15%;
     background: linear-gradient(to bottom, red , yellow); /* Standard syntax */
 }
